--- a/yamlfun.cabal
+++ b/yamlfun.cabal
@@ -34,6 +34,7 @@ executable yamlfun
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , nicify-lib
+                     , text
                      , yamlfun
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
